# OWL

./: README.md
MCTS/: README.md  RESEARCH.md
MCTS-EXPERIMENTAL/mcts1/: mcts1.py
MCTS/MCTS-EXPERIMENTAL/: README.md
MCTS/colour/: colour_game.py
NEST/: README.md
OWL/: README.md
RL/RL-OWL/: README.md
env/: README.md
envs/: README.md  inspo.md
envs/collective/: README.md
envs/games/: README.md  game.py  game_1.py  games_logger.py  games_math.py  games_math_game.py  games_observability.py  games_worlds.py  logger_config.json  math1game.py  observability.py  observability_config.json  teachings1.py  teachings2.py  testing.py
envs/rewards/: README.md
envs/search/: README.md
envs/systems/: README.md
explorative/: README.md  gyms_importants.py
games/: README.md
learning+/: README.md
mcts/: RESEARCH.md  mcts.md  mcts.txt
mcts/color/: README.md  color_game.py  logging.md  main.py  mcts.py  monitoring.py  visual.py
mcts/colour/: README.md  colour_game.py  main.py  mcts.py  visual.py
mcts/logged/: loggos.md  main.py
more/: readme.md
nest/: README.md
nest/agents/: README.md
nest/explorative/: ideas.py  testing_wandb.ipynb
owl/: README.md  example.py  exploration.py  game.py  learning.py  main.py  observability.py  pyproject.toml
owl/agents/: README.md
owl/game_mechanics/: building_blocks.py  game_translation.py  math1.py
owl/games/: game.py  game_1.py  math_utils.py
owl/observability/: app.jsonl
research/: overview.md  people.md
rl/: README.md
temp/: ideas.py  rewards.md  testing_wandb.ipynb  wandb.py
(+33 files in other folders)
